--- a/pubu2.html
+++ b/pubu2.html
@@ -3,27 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <style type="text/css">
-  body{
-    margin: 0;
-    padding: 0;
-  }
-.pubu{
-    position: absolute;
-    width: 1100px;
-    left: 50%;
-    margin-left: -550px;
-}
-.box{
-    padding:20px 0 0 20px;
-    float: left;
-}
-.box img{
-    width: 200px;
-    height: auto;
-    opacity: 0;
-}
-  </style>
+  <style>
+        .box {
+            position: relative;
+        }
+        img {
+            width: 200px;
+            vertical-align: top;
+            padding: 5px;
+        }
+</style>
 </head>
 <body>
   <div id="app">
