--- a/pubu2.html
+++ b/pubu2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <style>
-        .box {
+        .pubu {
             position: relative;
         }
         img {
