--- a/pubu2.html
+++ b/pubu2.html
@@ -25,11 +25,9 @@
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
   $.getJSON("https://image.gincode.icu/api/manage/list", function(data) {
-    console.log(data)
-    //imgList =JSON.parse(data);
-    imgList = data
+    //console.log(data)
+    imgList =JSON.parse(data);
     var targetElement = document.querySelector('.box');
-    
     let str ='';
     for (let i = 0; i < imgList.length; i++){
       if(imgList[i].name.indexOf(".mp4")>0)continue;
@@ -40,44 +38,43 @@
 </script>
 </body>
 <script>
-// 在这里编写你的代码
-$(function () {
-        // 获取图片的宽度(200px)
-        let imgWidth = $('img').outerWidth(); // 200
-        //console.log(imgWidth)
-        waterfallHandler();
+  window.onload = $(function () {
+      // 获取图片的宽度(200px)
+      let imgWidth = $('img').outerWidth(); // 200
+      //console.log(imgWidth)
+      waterfallHandler();
 
-        // 瀑布流处理
-        function waterfallHandler() {
-            // 获取图片的列数
-            let column = parseInt($(window).width() / imgWidth);
-            //console.log(column)
-            // 高度数组
-            let heightArr = [];
-            for(let i=0; i<column; i++) {
-                heightArr[i] = 0;
-            }
-            $.each($('img'), function (index, item) {
-                // 当前元素的高度
-                let itemHeight = $(item).outerHeight();
-                // 高度数组最小的高度
-                let minHeight = Math.min(...heightArr);
-                // 高度数组最小的高度的索引
-                let minIndex = heightArr.indexOf(minHeight);
-                $(item).css({
-                    position: 'absolute',
-                    top: minHeight + 'px',
-                    left: minIndex * imgWidth + 'px'
-                });
+      // 瀑布流处理
+      function waterfallHandler() {
+          // 获取图片的列数
+          let column = parseInt($(window).width() / imgWidth);
+          //console.log(column)
+          // 高度数组
+          let heightArr = [];
+          for(let i=0; i<column; i++) {
+              heightArr[i] = 0;
+          }
+          $.each($('img'), function (index, item) {
+              // 当前元素的高度
+              let itemHeight = $(item).outerHeight();
+              // 高度数组最小的高度
+              let minHeight = Math.min(...heightArr);
+              // 高度数组最小的高度的索引
+              let minIndex = heightArr.indexOf(minHeight);
+              $(item).css({
+                  position: 'absolute',
+                  top: minHeight + 'px',
+                  left: minIndex * imgWidth + 'px'
+              });
 
-                heightArr[minIndex] += itemHeight;
-            });
-        }
+              heightArr[minIndex] += itemHeight;
+          });
+      }
 
-        // 窗口大小改变
-        $(window).resize(function () {
-            waterfallHandler();
-        });
-    });
+      // 窗口大小改变
+      $(window).resize(function () {
+          waterfallHandler();
+      });
+  });
 </script>
 </html>
