--- a/pubu2.html
+++ b/pubu2.html
@@ -8,8 +8,28 @@
   body{
     background: linear-gradient(90deg, #ffd7e4 0%, #c8f1ff 100%);
   }
+   ::-webkit-scrollbar {
+		width: 8px;
+		height: 8px;
+	}
+
+	 ::-webkit-scrollbar-corner {
+		background-color: transparent;
+	}
+
+	 ::-webkit-scrollbar-thumb {
+		background-color: #49b1f5;
+		background-image: -webkit-linear-gradient(45deg, hsla(0, 0%, 100%, .4) 25%, transparent 0, transparent 50%, hsla(0, 0%, 100%, .4) 0, hsla(0, 0%, 100%, .4) 75%, transparent 0, transparent);
+		border-radius: 2em;
+	}
+
+	 ::-webkit-scrollbar-track {
+		background-color: rgba(73, 177, 245, .2);
+		border-radius: 2em;
+	}
   .box {
       position: relative;
+    margin-left: 1.25%;
   }
   img {
       width: 200px;
