--- a/pubu2.html
+++ b/pubu2.html
@@ -33,7 +33,8 @@
   img {
       width: 200px;
       height: auto;
-      padding: 10px;
+      padding: 5px;
+      margin-left: 1.25%;
       border-radius: 20px;
   }
   #bigimg {
