--- a/pubu2.html
+++ b/pubu2.html
@@ -114,6 +114,23 @@
       $(window).resize(function () {
           waterfallHandler();
       });
+	      function showBigImg(img) {
+	var bigImg = document.getElementById('bigimg');
+	var imgUrl = img.getAttribute('data-original');
+	bigImg.innerHTML = '<img src="' + imgUrl + '">';
+	bigImg.style.display = 'block';
+	// 获取屏幕的宽度和高度
+	//var screenWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+	//var screenHeight = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+	//bigImg.style.maxWidth = screenWidth * 0.9 + 'px';
+	//bigImg.style.maxHeight = screenHeight * 0.9 + 'px';
+}
+
+function closeBigImg() {
+	var bigImg = document.getElementById('bigimg');
+	bigImg.style.display = 'none';
+	bigImg.innerHTML = '';
+}
     </script>
 </body>
 
