--- a/pubu2.html
+++ b/pubu2.html
@@ -119,7 +119,7 @@
       });
 	      function showBigImg(img) {
 	var bigImg = document.getElementById('bigimg');
-	var imgUrl = img.getAttribute('data-original');
+	var imgUrl = img.getAttribute('data-src');
 	bigImg.innerHTML = '<img src="' + imgUrl + '">';
 	bigImg.style.display = 'block';
 	// 获取屏幕的宽度和高度
