--- a/pubu2.html
+++ b/pubu2.html
@@ -57,7 +57,7 @@
             data: "count=all",
             dataType: "json",
             success: function (data) {
-                imgList = data.dataList; // 将请求的数据赋值给全局变量
+                imgList = data.datalist; // 将请求的数据赋值给全局变量
             }
         });
 
