--- a/pubu.html
+++ b/pubu.html
@@ -79,7 +79,7 @@
   credentials: 'include'
   
 };
-fetch("./api/manage/list", requestOptions)
+fetch("./api/manage/list?count=all", requestOptions)
   //判断是否需要登录
   .then(response => {
     if(response.status==401){
